force-app/main/default/objects/Equipment__c/fields/Equipment_Category__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Category__c</fullName>
    <label>Equipment Category</label>
    <referenceTo>Equipment_Category__c</referenceTo>
    <relationshipLabel>Equipment</relationshipLabel>
    <relationshipName>Equipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>