force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Equipment_Category__c</columns>
    <columns>Vendor__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>